[package]
name = "soloud_mem_leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = { version = "1", default-features = false, features = ["alsa"] }
tokio = { version = "1.19.2", features = ["full"] }
